java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advFixture/ClassPackageConflict.java
package c;
class Test {
  a.<error descr="Cannot resolve symbol 'b'">b</error> myB;
}